<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity5">

    <Button
        android:id="@+id/button7"
        android:layout_width="284dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/amaranth_bold"
        android:gravity="start"
        android:text="@string/ViewAll"
        android:textColor="@color/dark_blue"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/help"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imageButton9"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/imageButton10"
        app:srcCompat="@drawable/outline_help_outline_24" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/dashboard"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_dashboard_24" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="9dp"
        android:layout_marginBottom="21dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/notification"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageButton7"
        app:srcCompat="@drawable/baseline_circle_notifications_24" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#03FFFFFF"
        android:contentDescription="@string/acc"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_account_circle_24" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="77dp"
        android:layout_height="73dp"
        android:layout_marginStart="172dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/add"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/round_add_circle_24" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTasks"
        android:layout_width="391dp"
        android:layout_height="444dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:layout_constraintVertical_bias="0.391">

    </androidx.recyclerview.widget.RecyclerView>

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="284dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

</androidx.constraintlayout.widget.ConstraintLayout>