<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/Hi3"
        android:textColor="@color/dark_blue"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/Hi1"
        android:textColor="@color/dark_blue"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Hi2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="65dp"
        android:layout_height="62dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="47dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pic" />

    <!-- Second Card -->

    <!-- Third Card -->

    <!-- Fourth Card -->

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="169dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="@color/ash"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/card3"
        app:layout_constraintEnd_toStartOf="@id/card2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <!-- Add your content for the first card here -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton11"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/ViewAll"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_arrow_circle_right_24" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="80dp"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/ViewAll"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_width="169dp"
        android:layout_height="140dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="200dp"
        app:cardBackgroundColor="@color/ash"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Add your content for the third card here -->

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card4"
        android:layout_width="169dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="200dp"
        app:cardBackgroundColor="@color/ash"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toEndOf="@id/card3"
        app:layout_constraintTop_toBottomOf="@id/card2"
        app:layout_constraintVertical_bias="0.0">

        <!-- Add your content for the fourth card here -->

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="169dp"
        android:layout_height="140dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/ash"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card1"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <!-- Add your content for the second card here -->

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="77dp"
        android:layout_height="73dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="112dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/add"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card3"
        app:srcCompat="@drawable/round_add_circle_24" />

    <ImageButton
        android:id="@+id/imageButton2delete"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="21dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/dashboard"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_dashboard_24" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="9dp"
        android:layout_marginBottom="21dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/notification"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton2delete"
        app:srcCompat="@drawable/baseline_circle_notifications_24" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="21dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/help"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:srcCompat="@drawable/outline_help_outline_24" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="21dp"
        android:backgroundTint="#03FFFFFF"
        android:contentDescription="@string/acc"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_account_circle_24" />

    <Button
        android:id="@+id/button"
        android:layout_width="284dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="39dp"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/Hi9"
        android:textColor="@color/dark_blue"
        android:textSize="24sp"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="57dp"
        android:text="@string/Hi10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card4" />

</androidx.constraintlayout.widget.ConstraintLayout>