<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity2">


    <RelativeLayout

        android:id="@+id/realtive01"
        android:layout_width="291dp"
        android:layout_height="294dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="60dp"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            android:cropToPadding="true"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/splash" />


    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/app_name"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/realtive01" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="39dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/splash"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="29dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button3"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_outline"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/dark_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>