<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity7">

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="145dp"
        android:ems="10"
        android:inputType="text"
        android:text="priority"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="196dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="Priority"
        android:textColor="@color/dark_blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="108dp"
        android:layout_height="26dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="204dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/des"
        android:textColor="@color/dark_blue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="86dp"
        android:layout_height="23dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="352dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/timeS"
        android:textColor="@color/dark_blue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTime4"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="228dp"
        android:ems="10"
        android:inputType="time"
        android:text="@string/timeS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="42dp"
        android:layout_height="22dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="300dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="Date"
        android:textColor="@color/dark_blue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="64dp"
        android:layout_height="27dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/title"
        android:textColor="@color/dark_blue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="86dp"
        android:layout_height="23dp"
        android:layout_marginStart="292dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/timeE"
        android:textColor="@color/dark_blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="108dp"
        android:layout_height="26dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="204dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/des"
        android:textColor="@color/dark_blue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="143dp"
        android:layout_height="36dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/add"
        android:textColor="@color/dark_blue"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/imageButton13"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton13"
        android:layout_width="55dp"
        android:layout_height="52dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="back"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="351dp"
        android:layout_height="51dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="355dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/des"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <EditText
        android:id="@+id/editTextDate2"
        android:layout_width="257dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/date"
        app:layout_constraintBottom_toTopOf="@+id/textView25"
        app:layout_constraintEnd_toStartOf="@+id/imageButton14"
        app:layout_constraintStart_toEndOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine2" />

    <ImageButton
        android:id="@+id/imageButton14"
        android:layout_width="55dp"
        android:layout_height="52dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="325dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="calander"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editTextDate2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/baseline_calendar_month_24" />

    <EditText
        android:id="@+id/editTextTime3"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="212dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="228dp"
        android:ems="10"
        android:inputType="time"
        android:text="@string/timeE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="355dp"
        android:layout_height="49dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="62dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>